// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab render panelHeader 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "off",
        "left": "off",
        "right": "off",
        "top": "additive",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        accessibilityLabel="panelHeaderLeftView"
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "flex-start",
              "maxWidth": 96,
            },
            {
              "minWidth": 24,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 8,
            },
            {
              "flex": 1,
            },
          ]
        }
      />
      <View
        accessibilityLabel="panelHeaderRightView"
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "flex-end",
              "maxWidth": 96,
            },
            {
              "minWidth": 24,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader edges 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "off",
        "left": "additive",
        "right": "off",
        "top": "off",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "width": 24,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#5E6678",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 12,
                  "lineHeight": 16,
                  "minHeight": 16,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            Subtitle
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "width": 24,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader isSafeAreaView 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "space-between",
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        },
        {
          "backgroundColor": "#000",
        },
      ]
    }
  >
    <View
      accessibilityLabel="panelHeaderLeftView"
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "flex-start",
            "maxWidth": 96,
          },
          {
            "minWidth": 24,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#5E6678",
            "fontFamily": "Neotis",
            "fontSize": 24,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        [
          {
            "flex": 2,
            "paddingHorizontal": 8,
          },
          {
            "flex": 1,
          },
        ]
      }
    />
    <View
      accessibilityLabel="panelHeaderRightView"
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "flex-end",
            "maxWidth": 96,
          },
          {
            "minWidth": 24,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#5E6678",
            "fontFamily": "Neotis",
            "fontSize": 24,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tab render panelHeader only leftView 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "off",
        "left": "off",
        "right": "off",
        "top": "additive",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        accessibilityLabel="panelHeaderLeftView"
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "flex-start",
              "maxWidth": 96,
            },
            {
              "minWidth": 24,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 8,
            },
            {
              "flex": 1,
            },
          ]
        }
      />
      <View
        style={
          {
            "width": 24,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader only rightView 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "off",
        "left": "off",
        "right": "off",
        "top": "additive",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        style={
          {
            "width": 24,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 8,
            },
            {
              "flex": 1,
            },
          ]
        }
      />
      <View
        accessibilityLabel="panelHeaderRightView"
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "flex-end",
              "maxWidth": 96,
            },
            {
              "minWidth": 24,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 24,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with subtitle 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "off",
        "left": "off",
        "right": "off",
        "top": "additive",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "width": 24,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#5E6678",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 12,
                  "lineHeight": 16,
                  "minHeight": 16,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            Subtitle
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "width": 24,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with title 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "off",
        "left": "off",
        "right": "off",
        "top": "additive",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "width": 24,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#444B5A",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 20,
                  "minHeight": 20,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            title
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "width": 24,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader without props 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      {
        "bottom": "off",
        "left": "off",
        "right": "off",
        "top": "additive",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "width": 24,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        />
      </View>
      <View
        style={
          {
            "width": 24,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;
